--- a/src/index.css
+++ b/src/index.css
@@ -106,8 +106,8 @@ h5,
 h6 {
   font-family: "Josefin Sans", sans-serif;
   color: #111;
-  font-weight: 400;
-  margin-bottom: 20px;
+  font-weight: 700;
+  margin-bottom: 0;
 }
 
 h1 a,
@@ -125,27 +125,27 @@ h1 {
 }
 
 h2 {
-  font-size: 36px;
+  font-size: 40px;
   line-height: 1.3;
 }
 
 h3 {
-  font-size: 28px;
+  font-size: 36px;
   line-height: 1.3;
 }
 
 h4 {
-  font-size: 24px;
+  font-size: 28px;
   line-height: 1.2;
 }
 
 h5 {
-  font-size: 20px;
+  font-size: 24px;
   line-height: 1.2;
 }
 
 h6 {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.2;
 }
 
@@ -220,10 +220,11 @@ label {
   border-color: #4cc5cc;
   background: #4cc5cc;
 }
-.btn-theme:hover {
-  background: #4cc5cc;
+
+.btn-theme-2 {
   color: #fff;
-  border-color: #4cc5cc;
+  border-color: #156e9a;
+  background: #156e9a;
 }
 
 .btn-rounded {
@@ -253,6 +254,14 @@ label {
 
 .bg-black {
   background: #000;
+}
+
+.bg-theme {
+  background: #4cc5cc;
+}
+
+.bg-theme-2 {
+  background: #156e9a;
 }
 
 .bg-light {
@@ -304,11 +313,21 @@ label {
   color: #000;
 }
 
-.theme-color {
+.text-theme {
   color: #4cc5cc;
+}
+.text-theme-2 {
+  color: #156e9a;
 }
 
 /* Others Common Css Here :) */
+
+table,
+.table,
+table *,
+.table * {
+  box-shadow: none !important;
+}
 
 .table-row {
   display: table;
@@ -339,13 +358,14 @@ label {
 
 .header-area {
   box-shadow: 0 0 5px #00000020;
-  position: fixed;
+  position: sticky;
   width: 100%;
   top: 0;
   left: 0;
   z-index: 9998999;
-  background: #fff;
-  padding: 12px 0;
+  background: #4cc5cb;
+  padding: 14px 0;
+  height: 65px;
 }
 
 .main-menu {
@@ -360,8 +380,9 @@ label {
 }
 
 .main-menu li a {
-  color: #212529;
-  font-weight: 600;
+  color: #fff;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 .header-right {
@@ -377,8 +398,9 @@ label {
 }
 
 .header-right ul li a {
-  color: #212529;
-  font-weight: 600;
+  color: #fff;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 /* header css end */
@@ -389,19 +411,95 @@ label {
   padding: 100px 0;
 }
 
-.banner-text h1 {
-  font-size: 45px;
+.common-banner-area {
+  background-image: url("/img/banner/bg-1.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 250px;
+  padding: 92px 0;
+}
+
+.banner-text {
+  margin-bottom: 24px;
 }
 
 .banner-text strong {
   color: #4cc5cc;
 }
 
-.banner-img {
-  text-align: center;
+.banner-btn a {
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 /* banner css end */
+
+/* footer css start  */
+
+.footer-area {
+  background: #c7e3df;
+  padding: 70px 0;
+}
+
+.footer-logo {
+  display: inline-block;
+  width: 250px;
+}
+
+.footer-description {
+  padding-right: 50px;
+}
+
+.footer-social ul {
+  list-style: none;
+}
+
+.footer-social ul li {
+  display: inline-block;
+  margin-right: 12px;
+}
+
+.footer-social ul li a {
+  font-size: 24px;
+  color: #212529;
+  transition: all 0.3s linear;
+}
+
+.footer-social ul li a:hover {
+  color: #156e9a;
+}
+
+.footer-widget ul {
+  list-style: none;
+}
+
+.footer-widget h4 {
+  margin-bottom: 12px;
+}
+.footer-widget ul li {
+  margin-bottom: 12px;
+}
+
+.footer-widget ul li h4 {
+  margin-bottom: 12px;
+}
+
+.footer-widget ul li a {
+  color: #212529;
+  font-weight: 600;
+  transition: all 0.3s linear;
+}
+
+.footer-widget ul li a:hover {
+  color: #156e9a;
+}
+
+.bottom-footer {
+  text-align: center;
+}
+
+/* footer css end */
 
 .invoice-container {
   max-width: 1440px;
